fixed datasets import

--- a/index.ipynb
+++ b/index.ipynb
@@ -17,9 +17,9 @@
     "import pandas as pd\n",
     "\n",
     "# Load the CSV data into DataFrames\n",
-    "super_bowls = pd.read_csv('/home/locsta/Programming/Datasets/DataCamp - Super Bowl Project/super_bowls.csv')\n",
-    "tv = pd.read_csv('/home/locsta/Programming/Datasets/DataCamp - Super Bowl Project/tv.csv')\n",
-    "halftime_musicians = pd.read_csv('/home/locsta/Programming/Datasets/DataCamp - Super Bowl Project/halftime_musicians.csv')"
+    "super_bowls = pd.read_csv('datasets/super_bowls.csv')\n",
+    "tv = pd.read_csv('datasets/tv.csv')\n",
+    "halftime_musicians = pd.read_csv('datasets/halftime_musicians.csv')"
    ]
   },
   {
